# voxalign

./: .gitignore  .pre-commit-config.yaml  AGENT.md  LICENSE  PROJECT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: dev.toml  prod.toml
docs/: benchmark-plan.md  implementation-plan.md
eval/: README.md  asr_disfluency_smoke.py  benchmark.py
eval/manifests/: buckeye.sample.jsonl  sample.jsonl  seoul_corpus.sample.jsonl  timit.sample.jsonl
src/voxalign/: __init__.py  api.py  cli.py  config.py  models.py
src/voxalign/align/: __init__.py  trellis.py
src/voxalign/align/backends/: __init__.py  base.py  ctc_trellis.py  phoneme_first.py  registry.py  uniform.py
src/voxalign/asr/: __init__.py  base.py  registry.py
src/voxalign/core/: __init__.py  pipeline.py
src/voxalign/eval/: __init__.py  metrics.py
src/voxalign/io/: __init__.py  audio.py  export.py
src/voxalign/languages/: __init__.py  base.py  english.py  generic.py  registry.py
tests/: test_api.py  test_asr.py  test_audio_io.py  test_backends.py  test_cli.py  test_config.py  test_ctc_model_routing.py  test_eval_metrics.py  test_export.py  test_languages.py  test_pipeline.py  test_trellis.py
