[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "voxalign"
version = "0.1.0"
description = "Multilingual forced aligner for precise word- and phoneme-level timestamps."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "byseon" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "numpy>=2.0,<3.0",
  "pydantic>=2.10,<3.0",
  "uvicorn>=0.30,<1.0",
]

[dependency-groups]
asr = [
  "torch>=2.6,<3.0",
  "transformers>=4.48,<5.0",
]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.13,<2.0",
  "pre-commit>=4.0,<5.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.7,<1.0",
]

[project.scripts]
voxalign = "voxalign.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/voxalign"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_configs = true
packages = ["voxalign"]

[tool.coverage.run]
source = ["src/voxalign"]
